# 221_329_Samoilov

./: .gitignore  CMakeLists.txt  main.cpp  transactions.txt
src/: addtransactiondialog.cpp  addtransactiondialog.h  mainwindow.cpp  mainwindow.h  transactionmodel.cpp  transactionmodel.h
